[package]
name = "mizudb"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
datafusion = "54.0.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
url = "2.5.8"
async-trait = "0.1.89"
bytes = "1"
t4 = "0.1.7"
futures-core = "0.3.32"
futures-util = "0.3.32"
json = "0.12.4"
